--- a/styles.css
+++ b/styles.css
@@ -176,6 +176,12 @@ canvas {
     text-align: center;
     width: 100%;
 }
+
+@media (max-width: 1200px) {
+    #score, #record {
+        font-size: calc(1.35vw + 1.35vh);    
+    }
+}
 @media (max-width: 900px) {
     #score, #record {
         font-size: calc(1.25vw + 1.25vh);    
